# daily-logs-cleaner

./: README.md  log_formatter.py  pyproject.toml
