[tool.poetry]
name = "telegram-log-formatter"
version = "0.1.0"
description = "A tool to format Telegram log messages from clipboard"
authors = ["Angelo Mosquera"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
log-formatter = "log_formatter:main" 